<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/nama"
        app:boxStrokeWidth="1dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:textColorHint="@android:color/darker_gray"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edNama"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginStart="20dp"
        android:text="Tipe Pelanggan"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/edMember"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/edgold"
            android:layout_marginStart="20dp"
            android:text="@string/gold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/edsilver"
            android:layout_marginStart="20dp"
            android:text="@string/silver"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/edbiasa"
            android:layout_marginStart="20dp"
            android:text="@string/biasa"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/kode_barang"
        app:boxStrokeWidth="1dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:textColorHint="@android:color/darker_gray"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edkodeBarang"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/jumlah_barang"
        app:boxStrokeWidth="1dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edJumlahBarang"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnProses"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/proses"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>